<resources>
    <string name="app_name">Fizzbuzz</string>
    <string name="let_me_count_that_number">Let me count to this number</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="choose_first_int">first number</string>
    <string name="choose_second_int">second number</string>
    <string name="choose_fizzbuzz">fizzbuzz equivalent</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="choose_limit">choose a limit below 1000000</string>
    <string name="mandatory_field">mandatory</string>
    <string name="mandatory_and_not_null_field">mandatory and not null</string>
    <string name="explication">Set all the required fields and click on the next button</string>
</resources>